# Python-dtctl

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: architecture.md  code-style.md  commands.md  development.md  testing.md  workflow.md
docs/: API_DESIGN.md  ARCHITECTURE.md  DESIGN_PRINCIPLES.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  QUICK_START.md  TOKEN_SCOPES.md
src/dtctl/: __init__.py  cli.py  client.py  config.py  output.py
src/dtctl/commands/: apply.py  auth.py  bulk.py  cache.py  chown.py  clone.py  completion.py  config.py  create.py  delete.py  describe.py  edit.py  execute.py  export.py  get.py  history.py  logs.py  query.py  restore.py  share.py  template.py  wait.py
src/dtctl/resources/: __init__.py  analyzer.py  app.py  base.py  bucket.py  copilot.py  document.py  edgeconnect.py  iam.py  limits.py  lookup.py  notification.py  openpipeline.py  query.py  settings.py  slo.py  workflow.py
src/dtctl/utils/: __init__.py  auth.py  cache.py  format.py  resolver.py  template.py
tests/: __init__.py  conftest.py  test_auth.py  test_completion.py  test_history.py  test_integration.py  test_lookup.py  test_restore.py  test_validation.py  test_wait.py
